# Simple_parser

./: .gitignore  CMakeLists.txt  README.md
include/: config_parser.hpp
source/: config_parser.cpp
